intermediate revision - fixed configuration memory limit for "platform-service"